--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Project</string>
     <string name="button_start">Start</string>
+    <string name="play">Play</string>
+    <string name="home">Home</string>
+    <string name="dxml">Download xml</string>
 </resources>
