--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="dxml">Download xml</string>
     <string name="load">Loading...</string>
     <string name="piano">Piano</string>
+    <string name="title_activity_play_list_acitivity">PlayListAcitivity</string>
 </resources>
