change loading background

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="play">Play</string>
     <string name="home">Home</string>
     <string name="dxml">Download xml</string>
-    <string name="load">Loading...</string>
+    <string name="load">Loading......</string>
 </resources>
